# qproof

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: qproof.yml
qproof/: __init__.py  __main__.py  baseline.py  cli.py  models.py  policy.py
qproof/advisor/: __init__.py  migration.py
qproof/classifier/: __init__.py  context.py  quantum_risk.py  severity.py
qproof/data/: __init__.py  algorithms.yaml  libraries.yaml  loader.py
qproof/output/: __init__.py  cbom.py  json_out.py  sarif.py  text.py
qproof/scanner/: __init__.py  config.py  deps.py  source.py
qproof/utils/: __init__.py  file_walker.py
tests/: conftest.py  test_advisor.py  test_algorithms_db.py  test_baseline.py  test_cbom_output.py  test_classifier.py  test_cli.py  test_config_scanner.py  test_context.py  test_deps_scanner.py  test_diff.py  test_file_walker.py  test_integration.py  test_json_output.py  test_models.py  test_policy.py  test_sarif_output.py  test_severity.py  test_source_scanner.py  test_text_output.py
tests/fixtures/: qproof_expired_allow.yml  qproof_invalid.yml  qproof_valid.yml
tests/fixtures/sample_configs/: id_ed25519.pub  id_rsa.pub  jwt_config.json  nginx.conf  openssl.cnf  server.pem  sshd_config
tests/fixtures/sample_project/: app.py  index.ts  package.json  requirements.txt
