[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qproof"
version = "0.1.0-dev"
description = "Find quantum-vulnerable cryptography in your codebase"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "qproof contributors" }]
keywords = ["quantum", "cryptography", "security", "pqc", "scanner", "cbom"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
qproof = "qproof.cli:main"

[project.urls]
Homepage = "https://github.com/qproof/qproof"
Repository = "https://github.com/qproof/qproof"
Issues = "https://github.com/qproof/qproof/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
